--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" content="img/favicon.ico">
         <link rel="apple-touch-icon" href="img/favicon.ico">
-        <title>Le site est en cours de développement...</title>
+        <title>NightGen - Réouverture</title>
     </head>
